codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hidden_shell_paste_queued_preview.snap
---
source: tui/src/chatwidget/tests/composer_submission.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
• Working (0s • esc to interrupt)

• Queued follow-up inputs
  ↳ [Pasted Content 1006 chars]
    shift + ← edit last queued message

› Ask Suffice to do anything

  glm-5.3-flash default · /tmp/project
